[WIP] Check-in local dev environment for side-by-side comparison of trade modal

--- a/src/assets/translations/messages-en.json
+++ b/src/assets/translations/messages-en.json
@@ -134,6 +134,7 @@
     "minerFee": "Miner Fee",
     "shapeshiftFee": "ShapeShift Fee",
     "confirmDetails": "Confirm Details",
+    "confirmTrade": "Confirm Trade",
     "confirmAndTrade": "Confirm and Trade",
     "complete": "Trade Complete",
     "approveAsset": "Approve interacting with %{symbol}",
